# pi2-back

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.codex/: config.toml
app/: __init__.py  main.py
app/api/: dependencies.py  router.py
app/api/routes/: auth.py  educenso.py  users.py
app/core/: __init__.py  config.py  exceptions.py  security.py
app/db/: session.py
app/models/: __init__.py  dim_localidade.py  fato_educacao.py  fato_socioeconomico.py  perfil.py  relatorio.py  usuario.py
app/repositories/: educenso.py  user.py
app/schemas/: auth.py  educenso.py  ibge.py  user.py
app/services/: auth.py  educenso.py  user.py
app/utils/: __init__.py  analytics.py  heatmap.py  likert.py  recommendations.py
